--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Rollup Bundle</title>
     <link rel="stylesheet" href="build/bundle.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <script src="build/bundle.js"></script>
