--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Rollup Bundle</title>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vConsole/3.4.0/vconsole.min.js"></script>
+    <script>
+      new VConsole()
+    </script> -->
     <link rel="stylesheet" href="build/bundle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
